<resources>
    <string name="app_name">MOVILINE</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="nombre">Inserte Nombre</string>
    <string name="apellidos">Inserte Apellidos</string>
    <string name="dni">Inserte DNI</string>
    <string name="telefono">Inserte Telefono</string>
    <string name="title_activity_compra_">Inserte Compra_Activity</string>
    <string name="title_activity_compra_2">Inserte Compra_Activity2</string>
    <string name="nombreClienteDialog">Nombre:</string>
    <string name="apellidosClienteDialog">Apellidos:</string>
    <string name="dniClienteDialog">DNI:</string>
    <string name="provinciaClienteDialog">Provincia:</string>
    <string name="telefonoClienteDialog">Teléfono:</string>
    <string name="caracteristicasMovilDialog">Características del movil</string>
    <string name="marcaMovilDialog">Marca:</string>
    <string name="modeloMovilDialog">Modelo:</string>
    <string name="procesadorMovilDialog">Procesador:</string>
    <string name="ramMovilDialog">RAM:</string>
    <string name="precioMovilDialog">Precio:</string>
    <string name="modificarClienteDatos">Modificar Datos</string>
    <string name="modificaClienteNombre">Nombre:</string>
    <string name="modificaClienteApellidos">Apellidos:</string>
    <string name="modificaClienteDni">DNI:</string>
    <string name="modificaClienteProvincia">Provincia:</string>
    <string name="modificaClienteTelefono">Teléfono:</string>
    <string name="buscarCliente">Buscar cliente</string>
    <string name="stockMovilDialog">Stock:</string>
    <string name="modificar_moviles_dialog">Modificar Móviles</string>
    <string name="marcaDialog">Marca:</string>
    <string name="modeloDialog">Modelo:</string>
    <string name="procesadorDialog">Procesador:</string>
    <string name="ramDialog">RAM:</string>
</resources>
