<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_cliente"
    tools:context="com.example.giner.proyectopmm.Registro_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/user_blanco"
                        android:id="@+id/imageView2"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Registro Usuarios"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="22dp"
                        android:id="@+id/textView"
                        android:layout_weight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:text="Nombre"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/nombre"
                        android:ems="10"
                        android:id="@+id/editTextNombre" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Apellidos"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/apellidos"
                        android:ems="10"
                        android:id="@+id/editTextApellidos" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="DNI:"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/dni"
                        android:ems="10"
                        android:id="@+id/editTextDNI" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Localidad:"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/telefono"
                        android:id="@+id/editTextLocalidad" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:text="Telefono:"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/blanco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:hint="@string/telefono"
                        android:id="@+id/editTextTelefono" />

                </TableRow>


            </TableLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
