<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearTabla"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:text="Insertar Móviles"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:id="@+id/textView"
            android:layout_weight="1" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_margin="15dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/marcaDialog"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Introduce marca"
                    android:ems="10"
                    android:maxLength="30"
                    android:id="@+id/editTextMarca" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/modeloDialog"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Introduce modelo"
                    android:maxLength="30"
                    android:ems="10"
                    android:id="@+id/editTextModelo" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/procesadorDialog"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Introduce procesador"
                    android:maxLength="50"
                    android:ems="10"
                    android:id="@+id/editTextProcesador" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="@string/ramDialog"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:hint="Introduce RAM"
                    android:maxLength="30"
                    android:id="@+id/editTextRAM" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="Precio:"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:maxLength="5"
                    android:hint="Introduce precio"
                    android:id="@+id/editTextPrecio" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:text="Stock:"
                    android:textColor="@color/negro"
                    android:textSize="18dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:maxLength="4"
                    android:hint="Introduce stock"
                    android:id="@+id/editStock" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/return_button"
                android:id="@+id/imageButtonVolver"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/addmovil"
                android:id="@+id/imageButtonAnyadirMovil"
                android:layout_weight="1"
                android:layout_marginBottom="20dp"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>